--- a/Sun_Nan/ContosoUniversity/ContosoUniversity/bin/ContosoUniversity.dll.config
+++ b/Sun_Nan/ContosoUniversity/ContosoUniversity/bin/ContosoUniversity.dll.config
@@ -68,6 +68,7 @@
   <entityFramework>
     <contexts>
       <context type="ContosoUniversity.DAL.SchoolContext, ContosoUniversity">
+        <databaseInitializer type="ContosoUniversity.DAL.SchoolInitializer, ContosoUniversity" />
       </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
